# vex-lang

./: Cargo.toml  README.md
.github/workflows/: rust.yml  test.yml
docs/: vexc.md
docs/vexc/: index.md
vexc/: Cargo.toml
vexc/src/: lexer.rs  lib.rs  parser.rs
vixen/: Cargo.toml  README.md
vixen/src/: assembly.rs  main.rs
